--- a/src/Components/OurTeamMain/OurTeamMain.css
+++ b/src/Components/OurTeamMain/OurTeamMain.css
@@ -65,10 +65,14 @@
     .ourTeamSectionTop {
         display: flex;
         flex-direction: column;
+        gap: 55px;
+        margin-bottom: 55px;
+        padding: 0;
     }
     .ourTeamSectionBottom {
         display: flex;
         flex-direction: column;
+        gap: 55px;
     }
 }
 
