--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -31,7 +31,8 @@
     .rewardsSectionSecurity {
         display: flex;
         flex-direction: column;
-        gap: 130px;
+        gap: 100px;
+        margin-top: 90px;
     }
 }
 
