--- a/src/Components/SubscriptionSection/Subscription.css
+++ b/src/Components/SubscriptionSection/Subscription.css
@@ -190,6 +190,22 @@ form {
     }
 }
 
+@media only screen and (max-width:912px) {
+    .container {
+        gap: 90px;
+    }
+    .card {
+        width: 370px;
+    }
+    .card-image img {
+        width: 370px;
+    }
+    .card-image1 img {
+        margin-top: -43px;
+        width: 370px;
+    }
+}
+
 @media only screen and (max-width:820px) {
     .container {
         gap: 60px
@@ -276,6 +292,7 @@ form {
 @media only screen and (max-width:280px) {
     .card {
         width: 253px;
+        height: 157px;
     }
     .card-image img {
         width: 253px;
