--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -151,6 +151,31 @@
     }
 }
 
+@media only screen and (max-width: 912px) {
+    .leftRewardsSection {
+        gap: 15px;
+    }
+    .right-leftRewardsSection h2 {
+        font-size: 18px;
+    }
+    .right-leftRewardsSection p {
+        font-size: 15px;
+    }
+    .right-leftRewardsSection1 {
+        margin-top: 20px;
+    }
+    .right-leftRewardsSection1 button {
+        margin-top: 15px;
+        margin-left: 18px
+    }
+    .right-leftRewardsSection1 ul {
+        margin-top: 18px;
+        margin-left: 19px;
+        font-size: 14px;
+        margin-bottom: 22px;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .rewardsSection {
         display: flex;
@@ -203,7 +228,7 @@
         width: 368px;
     }
     .leftRewardsSection {
-        width: 400px;
+        width: 380px;
         padding: 10px 2px;
     }
 }
