--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -142,12 +142,14 @@
         width: 438px;
         height: 250px;
         padding: 20px;
+        margin-top: 59px;
     }
     .rewardsSection1 {
         gap: 18px;
     }
     .rightRewardsSection1 img {
         width: 400px;
+        margin-top: 80px;
     }
 }
 
@@ -173,6 +175,18 @@
         margin-left: 19px;
         font-size: 14px;
         margin-bottom: 22px;
+    }
+    .rewardsSection1 .leftRewardsSection {
+        padding-right: 45px;
+    }
+}
+
+@media only screen and (max-width:820px) {
+    .rightRewardsSection img {
+        width: 390px;
+    }
+    .rightRewardsSection1 img {
+        width: 372px;
     }
 }
 
