--- a/src/Components/SubscriptionSection/Subscription.css
+++ b/src/Components/SubscriptionSection/Subscription.css
@@ -77,6 +77,8 @@ button {
 .btnDemo a {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     font-style: normal;
     font-weight: 500;
     text-decoration: none;
@@ -196,13 +198,29 @@ form {
     }
     .card {
         width: 370px;
+        height: 265px;
     }
     .card-image img {
         width: 370px;
+        height: 265px;
     }
     .card-image1 img {
         margin-top: -43px;
         width: 370px;
+        height: 265px;
+    }
+    .btnDemo {
+        padding: 0;
+        height: 43px;
+        width: 148px;
+    }
+    .btnDemo h3 {
+        margin-top: 3px;
+        margin-left: 8px;
+        font-size: 12px;
+    }
+    .btnDemo .btnDemoImage {
+        height: 20px;
     }
 }
 
@@ -218,6 +236,19 @@ form {
     }
     .card-image1 img {
         width: 290px;
+    }
+    .btnDemo {
+        width: 126px;
+        height: 38px;
+        padding: 0;
+    }
+    .btnDemo h3 {
+        margin-top: 3px;
+        margin-left: 7px;
+        font-size: 11px;
+    }
+    .btnDemo .btnDemoImage {
+        height: 20px;
     }
 }
 
