--- a/src/Components/MiddleSection/GiftCardSection.css
+++ b/src/Components/MiddleSection/GiftCardSection.css
@@ -106,7 +106,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 65px;
+        gap: 40px;
         padding: 0;
         margin-top: 55px;
     }
@@ -115,15 +115,25 @@
         margin-bottom: 10px;
     }
     .GiftCardsContent img {
-        width: 100%;
+        height: 240px;
         margin: 0 auto;
-        height: 215px;
+        width: 410px;
     }
 }
 
 @media only screen and (max-width:540px) {
     .GiftCardsContent img {
         height: 230px;
+    }
+}
+
+@media only screen and (max-width:415px) {
+    .GiftCardsContent {
+        width: 80%;
+    }
+    .GiftCardsContent img {
+        width: 325px;
+        margin: 0;
     }
 }
 
