--- a/src/Components/OurTeamMain/OurTeamMain.css
+++ b/src/Components/OurTeamMain/OurTeamMain.css
@@ -76,14 +76,14 @@
         margin-left: 8px;
         font-size: 12px;
     }
-    .midBtn .btnDemoImage {
+    .midBtn img {
         height: 20px;
     }
 }
 
 @media only screen and (max-width:820px) {
     .OurTeamMainSection .MidSec {
-        gap: 305px;
+        gap: 298px;
     }
 }
 
