--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -259,6 +259,12 @@
     }
 }
 
+@media only screen and (max-width:360px) {
+    .leftRewardsSection {
+        width: 329px;
+    }
+}
+
 @media only screen and (max-width:348px) {
     .rightRewardsSection img {
         width: 280px;
