--- a/src/Components/SubscriptionSection/Subscription.css
+++ b/src/Components/SubscriptionSection/Subscription.css
@@ -1,392 +1,446 @@
-.container {
-    display: flex;
-    justify-content: center;
-    margin-top: 88px;
-    margin-bottom: 80px;
-    gap: 100px;
-}
-
-.card {
-    background-color: white;
-    width: 530px;
-    height: 330px;
-    margin: 25px;
-}
-
-.card-image img {
-    width: 536px;
-}
-
-.card-image1 img {
-    width: 530px;
-    margin-top: -57px;
-}
-
-.FrameContent {
-    text-align: center;
-    margin-top: -264px;
-}
-
-.FrameContent h2 {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 500;
-    margin-bottom: 7px;
-    font-size: 33px;
-    color: white;
-}
-
-.FrameContent p {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    color: #c6bdbd;
-    margin-top: 12px;
-    line-height: 21px;
-}
-
-button {
-    padding: 0.7rem 1.8rem;
-    font-size: 1rem;
-    cursor: pointer;
-    border-radius: .5rem;
-}
-
-.btnDemo {
-    background-color: #FF6000;
-    margin-top: 35px;
-    width: 200px;
-    transition: 0.7s ease;
-    border: none;
-}
-
-.btnDemo img {
-    width: 32px;
-}
-
-.btnDemo h3 {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 500;
-    margin-top: 8px;
-    margin-left: 10px;
-    font-size: 15px;
-}
-
-.btnDemo a {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    font-style: normal;
-    font-weight: 500;
-    text-decoration: none;
-    color: white;
-}
-
-.btnDemo:hover,
-.btnDemo:focus,
-.btnDemo:active {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
-.FrameContentRight {
-    text-align: center;
-    margin-top: -264px;
-}
-
-.FrameContentRight h2 {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 500;
-    margin-top: 92px;
-    font-size: 28px;
-    color: black;
-}
-
-.FrameContentRight p {
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    color: #161C2D;
-    margin-top: 7px;
-}
-
-form {
-    max-width: 70rem;
-    margin: 2rem auto;
-    max-width: 70rem;
-    display: flex;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-}
-
-.emailInput {
-    background: #FFFFFF;
-    border: 1px solid rgb(167 170 178 / 80%);
-    border-radius: 15px;
-    width: 81%;
-    height: 47px;
-    height: 47px;
-    border-radius: 0.6rem;
-}
-
-.submitInput {
-    color: white;
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 500;
-    background: #23C480;
-    border-radius: 15px;
-    width: 112px;
-    height: 47px;
-    cursor: pointer;
-    -webkit-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
-    border: none;
-    width: 96px;
-    height: 35px;
-    margin-left: -105px;
-    border-radius: 0.6rem;
-}
-
-.submitInput:hover {
-    -webkit-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
-    transform: scale(1.1);
-}
-
-@media only screen and (max-width: 1024px) {
-    .container {
-        gap: 0;
-    }
-    .card {
-        width: 461px;
-        height: 244px;
-        margin: 0;
-    }
-    .card-image img {
-        width: 430px;
-    }
-    .card-image1 img {
-        width: 443px;
-        margin-top: -57px;
-    }
-    .FrameContent {
-        margin-top: -208px;
-    }
-    .FrameContent h2 {
-        font-size: 24px;
-    }
-    .FrameContent p {
-        margin-top: 0;
-    }
-    .btnDemo .btnDemoImage {
-        width: 32px;
-    }
-}
-
-@media only screen and (max-width:912px) {
-    .container {
-        gap: 90px;
-    }
-    .card {
-        width: 370px;
-        height: 265px;
-    }
-    .card-image img {
-        width: 370px;
-        height: 265px;
-    }
-    .card-image1 img {
-        margin-top: -43px;
-        width: 370px;
-        height: 265px;
-    }
-    .btnDemo {
-        padding: 0;
-        height: 43px;
-        width: 148px;
-    }
-    .btnDemo h3 {
-        margin-top: 3px;
-        margin-left: 8px;
-        font-size: 12px;
-    }
-    .btnDemo .btnDemoImage {
-        height: 20px;
-    }
-}
-
-@media only screen and (max-width:820px) {
-    .container {
-        gap: 60px
-    }
-    .card {
-        width: 290px;
-    }
-    .card-image img {
-        width: 290px;
-    }
-    .card-image1 img {
-        width: 290px;
-    }
-    .btnDemo {
-        width: 126px;
-        height: 38px;
-        padding: 0;
-    }
-    .btnDemo h3 {
-        margin-top: 3px;
-        margin-left: 7px;
-        font-size: 11px;
-    }
-    .btnDemo .btnDemoImage {
-        height: 20px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
     .container {
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        align-items: center;
-        gap: 154px;
-        margin-bottom: 122px;
+        margin-top: 88px;
+        margin-bottom: 80px;
+        gap: 100px;
     }
+    
     .card {
-        width: 460px;
+        background-color: white;
+        width: 530px;
+        height: 330px;
+        margin: 25px;
     }
+    
     .card-image img {
-        width: 460px;
+        width: 536px;
     }
+    
     .card-image1 img {
-        width: 460px;
+        width: 530px;
+        margin-top: -57px;
     }
-}
-
-@media only screen and (max-width:540px) {
-    .container {
-        margin-bottom: 35px;
-    }
-    .card {
-        margin: 0;
-        width: 400px;
-    }
-    .card-image img {
-        width: 400px;
-    }
+    
     .FrameContent {
-        margin-top: -219px;
+        text-align: center;
+        margin-top: -264px;
     }
-    .btnDemo {
-        height: 48px;
-    }
-    .btnDemo a {
-        align-items: center;
-    }
-    .btnDemo img {
-        width: 28px;
-    }
-    .btnDemo h3 {
-        margin-top: 0;
-    }
-    .card-image1 img {
-        margin-top: -115px;
-        border-radius: 5px;
-        width: 400px;
-    }
-    .emailInput {
-        width: 68%;
-    }
-}
-
-@media only screen and (max-width:407px) {
-    .card {
-        width: 325px;
-    }
-    .card-image img {
-        width: 325px;
-    }
-    .card-image1 img {
-        width: 325px;
-    }
-}
-
-@media only screen and (max-width:280px) {
-    .card {
-        width: 253px;
-        height: 157px;
-    }
-    .card-image img {
-        width: 253px;
-    }
-    .card-image1 img {
-        width: 253px;
-    }
-    .FrameContent {
-        width: 252px;
-    }
-    .btnDemo {
-        height: 35px;
-        margin-top: 16px;
-        width: 126px;
-        padding: 6px;
-    }
-    .btnDemo a {
-        justify-content: center;
-        align-items: center;
-    }
-    .btnDemo h3 {
-        font-size: 10px;
-        margin-left: 0;
-    }
-    .btnDemo .btnDemoImage {
-        font-size: 25px;
-    }
-    .FrameContent {
-        margin-top: -146px;
-    }
+    
     .FrameContent h2 {
-        font-size: 20px;
+        font-family: 'Rubik';
+        font-style: normal;
+        font-weight: 500;
+        margin-bottom: 7px;
+        font-size: 33px;
+        color: white;
     }
+    
     .FrameContent p {
-        font-size: 9px;
+        font-family: 'Rubik';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        color: #c6bdbd;
+        margin-top: 12px;
+        line-height: 21px;
     }
-    .FrameContentRight h2 {
-        font-size: 17px;
+    
+    button {
+        padding: 0.7rem 1.8rem;
+        font-size: 1rem;
+        cursor: pointer;
+        border-radius: .5rem;
     }
+    
+    .btnDemo {
+        background-color: #FF6000;
+        margin-top: 35px;
+        width: 200px;
+        transition: 0.7s ease;
+        border: none;
+    }
+    
+    .btnDemo img {
+        width: 32px;
+    }
+    
+    .btnDemo h3 {
+        font-family: 'Rubik';
+        font-style: normal;
+        font-weight: 500;
+        margin-top: 8px;
+        margin-left: 10px;
+        font-size: 15px;
+    }
+    
+    .btnDemo a {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        font-style: normal;
+        font-weight: 500;
+        text-decoration: none;
+        color: white;
+    }
+    
+    .btnDemo:hover,
+    .btnDemo:focus,
+    .btnDemo:active {
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    
     .FrameContentRight {
-        margin-top: -190px;
+        text-align: center;
+        margin-top: -264px;
     }
+    
+    .FrameContentRight h2 {
+        font-family: 'Rubik';
+        font-style: normal;
+        font-weight: 500;
+        margin-top: 92px;
+        font-size: 28px;
+        color: black;
+    }
+    
     .FrameContentRight p {
-        font-size: 12px;
-        margin-top: 1px;
+        font-family: 'Rubik';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        color: #161C2D;
+        margin-top: 7px;
     }
+    
     form {
-        margin: 0;
+        max-width: 70rem;
+        margin: 2rem auto;
+        max-width: 70rem;
+        display: flex;
+        border-radius: 0.5rem;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
     }
+    
     .emailInput {
-        border-radius: 10px;
-        height: 28px;
-        width: 85%;
-        border-radius: 10px;
-        margin-top: 18px;
-        font-size: 10px;
+        background: #FFFFFF;
+        border: 1px solid rgb(167 170 178 / 80%);
+        border-radius: 15px;
+        width: 81%;
+        height: 47px;
+        height: 47px;
+        border-radius: 0.6rem;
     }
+    
     .submitInput {
-        border-radius: 5px;
-        margin-left: -81px;
-        height: 20px;
-        width: 75px;
-        margin-top: 18px;
-        font-size: 9px;
+        color: white;
+        font-family: 'Rubik';
+        font-style: normal;
+        font-weight: 500;
+        background: #23C480;
+        border-radius: 15px;
+        width: 112px;
+        height: 47px;
+        cursor: pointer;
+        -webkit-transition: all 0.5s ease 0s;
+        transition: all 0.5s ease 0s;
+        border: none;
+        width: 96px;
+        height: 35px;
+        margin-left: -105px;
+        border-radius: 0.6rem;
     }
-}
+    
+    .submitInput:hover {
+        -webkit-transition: all 0.5s ease 0s;
+        transition: all 0.5s ease 0s;
+        transform: scale(1.1);
+    }
+    
+    @media only screen and (max-width: 1024px) {
+        .container {
+            gap: 0;
+        }
+        .card {
+            width: 461px;
+            height: 244px;
+            margin: 0;
+        }
+        .card-image img {
+            width: 430px;
+        }
+        .card-image1 img {
+            width: 443px;
+            margin-top: -57px;
+        }
+        .FrameContent {
+            margin-top: -208px;
+        }
+        .FrameContent h2 {
+            font-size: 24px;
+        }
+        .FrameContent p {
+            margin-top: 0;
+        }
+        .btnDemo .btnDemoImage {
+            width: 32px;
+        }
+    }
+    
+    @media only screen and (max-width:912px) {
+        .container {
+            gap: 68px;
+        }
+        .card {
+            width: 370px;
+            height: 265px;
+        }
+        .card-image img {
+            width: 370px;
+            height: 265px;
+        }
+        .card-image1 img {
+            margin-top: -50px;
+            height: 317px;
+            width: 370px;
+        }
+        .btnDemo {
+            padding: 0;
+            height: 43px;
+            width: 148px;
+        }
+        .btnDemo h3 {
+            margin-top: 3px;
+            margin-left: 8px;
+            font-size: 12px;
+        }
+        .btnDemo .btnDemoImage {
+            height: 25px;
+            width: 25px;
+        }
+    }
+    
+    @media only screen and (max-width:820px) {
+        .container {
+            gap: 60px
+        }
+        .card {
+            width: 345px;
+        }
+        .card-image img {
+            width: 345px;
+        }
+        .card-image1 img {
+            width: 345px;
+            height: 313px;
+            margin-top: -51px;
+        }
+        .btnDemo {
+            width: 126px;
+            height: 38px;
+            padding: 0;
+        }
+        .btnDemo h3 {
+            margin-top: 3px;
+            margin-left: 7px;
+            font-size: 11px;
+        }
+        .btnDemo .btnDemoImage {
+            height: 20px;
+            width: 25px;
+        }
+    }
+    
+    @media only screen and (max-width: 768px) {
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 154px;
+            margin-bottom: 122px;
+        }
+        .card {
+            width: 460px;
+            height: 350px;
+        }
+        .card-image img {
+            width: 460px;
+            height: 350px;
+        }
+        .card-image1 img {
+            width: 460px;
+            height: 350px;
+        }
+        .FrameContent {
+            margin-top: -232px;
+        }
+        .btnDemo {
+            width: 200px;
+            height: 50px;
+        }
+        .btnDemo h3 {
+            margin-top: 2px;
+            margin-left: 10px;
+            font-size: 15px;
+        }
+        .btnDemo .btnDemoImage {
+            width: 32px;
+        }
+    }
+    
+    @media only screen and (max-width:540px) {
+        .container {
+            margin-bottom: 35px;
+        }
+        .card {
+            margin: 0;
+            width: 400px;
+        }
+        .card-image img {
+            width: 400px;
+        }
+        .FrameContent {
+            margin-top: -219px;
+        }
+        .btnDemo {
+            height: 48px;
+        }
+        .btnDemo a {
+            align-items: center;
+        }
+        .btnDemo img {
+            width: 28px;
+        }
+        .btnDemo h3 {
+            margin-top: 0;
+        }
+        .card-image1 img {
+            margin-top: -115px;
+            border-radius: 5px;
+            width: 400px;
+        }
+        .emailInput {
+            width: 68%;
+        }
+    }
+    
+    @media only screen and (max-width:448px) {
+        .rightRewardsSectionSecurity img {
+            width: 331px;
+            height: 218px;
+        }
+    }
+    
+    @media only screen and (max-width:412px) {
+        .card {
+            width: 330px;
+        }
+        .card-image img {
+            width: 330px;
+            height: 265px;
+        }
+        .card-image1 img {
+            width: 330px;
+            height: 321px;
+        }
+        .FrameContentRight h2 {
+            font-size: 24px;
+        }
+        .emailInput {
+            width: 80%;
+        }
+        .submitInput {
+            width: 91px;
+            height: 32px;
+            font-size: 12px;
+        }
+    }
+    
+    @media only screen and (max-width:407px) {
+        .card {
+            width: 325px;
+        }
+        .card-image img {
+            width: 325px;
+        }
+        .card-image1 img {
+            width: 325px;
+        }
+    }
+    
+    @media only screen and (max-width:280px) {
+        .card {
+            width: 253px;
+            height: 157px;
+        }
+        .card-image img {
+            width: 253px;
+        }
+        .card-image1 img {
+            width: 253px;
+        }
+        .FrameContent {
+            width: 252px;
+        }
+        .btnDemo {
+            height: 35px;
+            margin-top: 16px;
+            width: 126px;
+            padding: 6px;
+        }
+        .btnDemo a {
+            justify-content: center;
+            align-items: center;
+        }
+        .btnDemo h3 {
+            font-size: 10px;
+            margin-left: 0;
+        }
+        .btnDemo .btnDemoImage {
+            font-size: 25px;
+        }
+        .FrameContent {
+            margin-top: -146px;
+        }
+        .FrameContent h2 {
+            font-size: 20px;
+        }
+        .FrameContent p {
+            font-size: 9px;
+        }
+        .FrameContentRight h2 {
+            font-size: 17px;
+        }
+        .FrameContentRight {
+            margin-top: -190px;
+        }
+        .FrameContentRight p {
+            font-size: 12px;
+            margin-top: 1px;
+        }
+        form {
+            margin: 0;
+        }
+        .emailInput {
+            border-radius: 10px;
+            height: 28px;
+            width: 85%;
+            border-radius: 10px;
+            margin-top: 18px;
+            font-size: 10px;
+        }
+        .submitInput {
+            border-radius: 5px;
+            margin-left: -81px;
+            height: 20px;
+            width: 75px;
+            margin-top: 18px;
+            font-size: 9px;
+        }
+    }
