--- a/src/Components/MiddleSection/GiftCardSection.css
+++ b/src/Components/MiddleSection/GiftCardSection.css
@@ -66,7 +66,8 @@
 
 @media only screen and (max-width: 1024px) {
     .GiftCard {
-        gap: 36px;
+        gap: 12px;
+        padding: 4rem 2rem;
         justify-content: center;
     }
     .GiftCardsContent img {
