--- a/src/Components/SecuritySection.css
+++ b/src/Components/SecuritySection.css
@@ -45,16 +45,21 @@
     .rewardsSectionSecurity {
         display: flex;
         flex-direction: column;
-        gap: 100px;
+        gap: 0px;
         margin-top: 90px;
+    }
+    .rightRewardsSectionSecurity img {
+        height: 277px;
+        width: 516px;
     }
 }
 
 @media only screen and (max-width:540px) {
     .rightRewardsSectionSecurity img {
-        height: 340px;
-        margin-top: -115px;
-        padding: 5px 25px;
+        height: 277px;
+        margin-top: -3px;
+        padding: 0;
+        width: 421px;
     }
 }
 
@@ -63,6 +68,20 @@
         width: 380px;
         height: 230px;
         padding: 0;
+    }
+}
+
+@media only screen and (max-width:400px) {
+    .rightRewardsSectionSecurity img {
+        width: 320px;
+        height: 230px;
+    }
+}
+
+@media only screen and (max-width:310px) {
+    .rightRewardsSectionSecurity img {
+        width: 283px;
+        height: 221px;
     }
 }
 
