--- a/src/Components/SubscriptionSection/Subscription.css
+++ b/src/Components/SubscriptionSection/Subscription.css
@@ -331,12 +331,7 @@
         }
     }
     
-    @media only screen and (max-width:448px) {
-        .rightRewardsSectionSecurity img {
-            width: 331px;
-            height: 218px;
-        }
-    }
+    @media only screen and (max-width:448px) {}
     
     @media only screen and (max-width:412px) {
         .card {
@@ -378,13 +373,15 @@
     @media only screen and (max-width:280px) {
         .card {
             width: 253px;
-            height: 157px;
+            height: 165px;
         }
         .card-image img {
             width: 253px;
+            height: 165px;
         }
         .card-image1 img {
             width: 253px;
+            height: 200px;
         }
         .FrameContent {
             width: 252px;
@@ -398,13 +395,15 @@
         .btnDemo a {
             justify-content: center;
             align-items: center;
+            gap: 10px;
         }
         .btnDemo h3 {
             font-size: 10px;
             margin-left: 0;
         }
         .btnDemo .btnDemoImage {
-            font-size: 25px;
+            width: 20px;
+            height: 20px;
         }
         .FrameContent {
             margin-top: -146px;
