--- a/src/Components/MiddleSection/GiftCardSection.css
+++ b/src/Components/MiddleSection/GiftCardSection.css
@@ -144,6 +144,7 @@
     .GiftCardsContent {
         height: 247px;
         width: 80%;
+        margin-bottom: 23px;
     }
     .GiftCardsContent p {
         font-size: 12px;
