--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -277,6 +277,12 @@
     }
 }
 
+@media only screen and (max-width:412px) {
+    .Footer-Section {
+        margin-top: -40px;
+    }
+}
+
 @media only screen and (max-width: 280px) {
     .footer-right {
         display: flex;
