--- a/src/Components/title/Title.css
+++ b/src/Components/title/Title.css
@@ -176,10 +176,10 @@ h4 {
     .btn a {
         align-items: center;
         justify-content: center;
-        gap: 0;
+        gap: 1px;
     }
     .btn img {
-        width: 22%;
+        width: 16%;
     }
     .btn h3 {
         font-size: 12px;
