--- a/src/Components/RewardsSection/Rewards.css
+++ b/src/Components/RewardsSection/Rewards.css
@@ -176,6 +176,9 @@
         font-size: 14px;
         margin-bottom: 22px;
     }
+    .rewardsSection1 .leftRewardsSection {
+        padding: 0 25px;
+    }
 }
 
 @media only screen and (max-width:820px) {
@@ -215,6 +218,9 @@
     }
     .right-leftRewardsSection {
         /*   margin-right: 85px;    */
+    }
+    .rewardsSection1 .leftRewardsSection {
+        padding: 0;
     }
 }
 
@@ -286,7 +292,7 @@
         gap: 20px;
     }
     .rewardsSection1 .leftRewardsSection {
-        padding-right: 10px;
+        padding: 0;
     }
     .rightRewardsSection img {
         width: 218px;
